<resources>
    <string name="app_name">PlaceYourGuess</string>
    <string name="google_maps_key">AIzaSyBmfG-mCZLnnTzrkscwvkFI_m-DIiuzYLU</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="settings">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="about">About</string>
    <string name="custom">Custom</string>
    <string name="distance">Distance:</string>
    <string name="points">Points:</string>
    <string name="total_score">Total Score:</string>
    <string name="new_location">New location</string>
    <string name="score">Score:</string>
    <string name="round">Round:</string>
    <string name="settings_timerLimit">timerLimit</string>
    <string name="settings_numOfRounds">numberOfRounds</string>
    <string name="settings_hintsEnabled">hintsEnabled</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_country_list">CountryListActivity</string>
    <string name="channel_name">Channel name</string>
    <string name="join">Join</string>
    <string name="num_of_players_ready">Players ready:</string>
    <string name="leave">Leave</string>
    <string name="not_joined">You haven\'t joined a game channel yet.</string>
    <string name="enter_nickname">Enter nickname</string>
    <string name="start_game">Start game</string>
    <string name="game_settings">Game settings</string>
    <string name="next">Next</string>
    <string name="final_score">Final score:</string>
    <string name="play_again">Play again</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="final_scores">Final scores:</string>
    <string name="ok">OK</string>
    <string name="hold_and_drag_markers_to_select_custom_location">Hold and drag markers to select custom location.</string>
    <string name="place_your_guess">Place your guess</string>
    <string name="room_name">Room name</string>
    <string name="create_room">Create room</string>
    <string name="room">Room:</string>
    <string name="leave_room">Leave room</string>
    <string name="players">Players:</string>
    <string name="start_game_btn">Start game</string>
    <string name="connecting">Connecting...</string>
    <string name="rooms">Rooms:</string>
    <string name="reload_list">Reload list</string>
    <string name="new_room">New room</string>
    <string name="hints">Hints:</string>
</resources>
