<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trm.placeyourguess.MultiplayerActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="15dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_nickname"
        android:hint="@string/enter_nickname"
        android:textColorHint="#fff"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_channel"
        android:hint="@string/channel_name"
        android:textColorHint="#fff"
        android:textColor="#fff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_join"
            android:text="@string/join"
            android:layout_weight=".5"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#fff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_leave"
            android:text="@string/leave"
            android:enabled="false"
            android:layout_weight=".5"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#fff"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_hostControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_startGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/start_game"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_switchToSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/game_settings"
            android:textColor="#fff" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_channelState"
        android:text="@string/not_joined"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="#fff"
        android:fontFamily="sans-serif-smallcaps"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:textSize="20sp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lv_playerList"/>

</LinearLayout>
