<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trm.placeyourguess.MultiplayerRoomActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_joinedRoomName"
        android:text="@string/room"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="#fff"
        android:textSize="30sp"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_leaveRoom"
            android:text="@string/leave_room"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:layout_weight=".5"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:id="@+id/btn_showScores"
            android:text="Show scores"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:enabled="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/players"
            android:textColor="#fff"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="20dp"
            android:layout_gravity="center"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lv_playersInRoom"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_roomHostControls"
            android:visibility="gone"
            android:weightSum="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_startMultiplayerGame"
                android:layout_weight=".5"
                android:text="@string/start_game_btn"
                android:textColor="#fff"
                android:backgroundTint="@color/colorPrimaryDark"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_changeSettings"
                android:layout_weight=".5"
                android:text="@string/game_settings"
                android:textColor="#fff"
                android:backgroundTint="@color/colorPrimaryDark"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
