<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trm.placeyourguess.ScoreSPActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:weightSum="1"
    android:gravity="center"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:text="@string/final_score"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/txt_finalScore"
            android:textColor="#fff"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_playAgain"
                android:text="@string/play_again"
                android:layout_weight=".5"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#ffff"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_backToMenu"
                android:text="@string/back_to_menu"
                android:layout_weight=".5"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#ffff"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
