<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trm.placeyourguess.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:weightSum="1"
    android:gravity="center"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".45"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".45"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <Button
            android:id="@+id/btn_singleplayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/singleplayer"
            android:text="@string/singleplayer"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_multiplayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/multiplayer"
            android:text="@string/multiplayer"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:drawableLeft="@drawable/help"
            android:text="@string/tutorial"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/settings"
                app:backgroundTint="@color/colorPrimaryDark"
                app:fabSize="mini"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/info"
                app:backgroundTint="@color/colorPrimaryDark"
                app:fabSize="mini" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
