<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trm.placeyourguess.MapActivity"
    xmlns:strokeAttrs="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/frag_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#88ffffff"
        android:visibility="gone"
        android:id="@+id/layout_score"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <com.example.trm.placeyourguess.StrokedTextView
            android:id="@+id/txt_Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/points"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            strokeAttrs:textStrokeColor="#fff"
            strokeAttrs:textStrokeWidth=".25"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_nextLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:drawableRight="@drawable/arrow"
            android:drawablePadding="5dp"
            android:text="@string/next"
            android:textColor="#fff" />

    </LinearLayout>

    <com.example.trm.placeyourguess.StrokedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_RoundTimer"
        android:layout_gravity="top|center"
        android:layout_margin="10dp"
        android:textSize="35sp"
        android:fontFamily="sans-serif-smallcaps"
        strokeAttrs:textStrokeColor="#fff"
        strokeAttrs:textStrokeWidth=".25"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:layout_margin="16dp"
        android:visibility="gone"
        android:id="@+id/layout_hints"
        android:gravity="center">

        <com.example.trm.placeyourguess.StrokedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hints"
            android:id="@+id/txt_hints"
            android:textSize="20sp"
            android:fontFamily="sans-serif-smallcaps"
            strokeAttrs:textStrokeColor="#fff"
            strokeAttrs:textStrokeWidth=".25"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_hintDistance"
            android:src="@drawable/hint_distance"
            app:backgroundTint="@color/colorPrimaryDark" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_hintCountry"
            android:src="@drawable/hint_country"
            app:backgroundTint="@color/colorPrimaryDark" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="bottom|left"
        android:layout_margin="16dp"
        android:background="@color/colorPrimaryDark"
        android:enabled="false"
        android:text="@string/ok"
        android:textColor="#fff"
        android:textSize="18sp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_switchToStreetView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/streetview"
        app:backgroundTint="@color/colorPrimaryDark"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"/>

</FrameLayout>
